--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "server/server.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "server/server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "server/server.js"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "server/server.js"
+      }
+    ],
+    "functions": {
+      "server/server.js": {
+        "runtime": "nodejs22.x"
+      }
+    },
+    "env": {
+      "NODE_ENV": "production"
+    }
+  }
