--- a/manifest.json
+++ b/manifest.json
@@ -32,14 +32,14 @@
     "action": {
       "default_popup": "index.html",
       "default_icon": {
-        "16": "icons/icon_main.png",
-        "48": "icons/icon_main.png",
-        "128": "icons/icon_main.png"
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
       }
     },
     "icons":{
-      "16":"icons/icon_main.png",
-      "48":"icons/icon_main.png",
-      "128":"icons/icon_main.png"
+      "16":"icons/icon16.png",
+      "48":"icons/icon48.png",
+      "128":"icons/icon128.png"
     }
   }
